--- a/angular-frontend/src/app/register/register.component.html
+++ b/angular-frontend/src/app/register/register.component.html
@@ -10,23 +10,23 @@
       novalidate
     >
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="name">Username</label>
         <input
           type="text"
           class="form-control"
-          name="username"
-          [(ngModel)]="form.username"
+          name="name"
+          [(ngModel)]="form.name"
           required
           minlength="3"
           maxlength="20"
-          #username="ngModel"
+          #name="ngModel"
         />
-        <div class="alert-danger" *ngIf="username.errors && f.submitted">
-          <div *ngIf="username.errors['required']">Username is required</div>
-          <div *ngIf="username.errors['minlength']">
+        <div class="alert-danger" *ngIf="name.errors && f.submitted">
+          <div *ngIf="name.errors['required']">Username is required</div>
+          <div *ngIf="name.errors['minlength']">
             Username must be at least 3 characters
           </div>
-          <div *ngIf="username.errors['maxlength']">
+          <div *ngIf="name.errors['maxlength']">
             Username must be at most 20 characters
           </div>
         </div>
@@ -69,6 +69,7 @@
       </div>
       <div class="form-group">
         <button class="btn btn-primary">Sign Up</button>
+        <a routerLink="../login" class="btn btn-link">Already have an account?</a>
       </div>
 
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
@@ -78,7 +79,9 @@
 
     <div class="alert alert-success" *ngIf="isSuccessful">
       Your registration is successful!
+      <a routerLink="../login" class="btn btn-link">Go back to login</a>
     </div>
+
   </div>
 </div>
 </div>
