Fix article detail view

--- a/angular-frontend/src/app/article-detail/article-detail.component.html
+++ b/angular-frontend/src/app/article-detail/article-detail.component.html
@@ -13,8 +13,9 @@
       </thead>
       <tbody>
       <tr>
-        <td></td>
-
+        <td>{{ article.title }}</td>
+        <td>{{ article.description }}</td>
+        <td>{{ article.articleStatus }}</td>
       </tr>
       </tbody>
     </table>
