use buttons instead of plain text for article-list-view

--- a/angular-frontend/src/app/article-list/article-list.component.html
+++ b/angular-frontend/src/app/article-list/article-list.component.html
@@ -4,24 +4,36 @@
   <div class="card-body">
     <h4 class="card-header">Articles</h4>
     <table class="table table-bordered table-striped">
+
       <thead class="thead-dark">
       <tr>
         <th scope="col">Title</th>
         <th scope="col">Description</th>
         <th scope="col">Status</th>
-        <th scope="col">Request</th>
+        <th scope="col">Borrow</th>
         <th scope="col">Details</th>
       </tr>
       </thead>
+
       <tbody>
+
       <tr *ngFor="let article of articles" >
+
         <td>{{ article.title }}</td>
         <td>{{ article.description }}</td>
         <td>{{ article.articleStatus }}</td>
-        <td (click)="borrow(article)" > Borrow now </td>
-        <td [routerLink]="['/article/', article.id]"> Details </td>
+
+        <td (click)="borrow(article)" >
+          <button mat-button> Borrow </button>
+        </td>
+
+        <td [routerLink]="['/article/', article.id]">
+          <button mat-button> Details </button>
+        </td>
+
       </tr>
       </tbody>
+
     </table>
   </div>
 </div>
