request menu and article search

--- a/angular-frontend/src/app/navigation/navigation.component.html
+++ b/angular-frontend/src/app/navigation/navigation.component.html
@@ -6,21 +6,25 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/articles">All Articles <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Requests</a>
+        <a class="nav-link" href="/articles">All Articles</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li class="nav-item dropdown" *ngIf="loggedIn()">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+          Requests
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/requests">Incoming requests</a>
+          <a class="dropdown-item" href="/myRequests">My requests</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown" *ngIf="loggedIn()">
+        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
           My articles
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Manage articles</a>
-          <a class="dropdown-item" href="#">Create article</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="/requests">Manage articles</a>
+          <a class="dropdown-item" href="/requests">Create article</a>
         </div>
       </li>
       <li class="nav-item">
