--- a/angular-frontend/src/app/article-list/article-list.component.html
+++ b/angular-frontend/src/app/article-list/article-list.component.html
@@ -3,6 +3,22 @@
 <div class="card my-5">
   <div class="card-body">
     <h4 class="card-header">Articles</h4>
+    <form>
+      <div class="form-group">
+        <div class="input-group">
+          <div class="input-group-addon">
+            <i class="glyphicon glyphicon-search"></i>
+          </div>
+          <input
+            type="text"
+            class="form-control"
+            name="searchString"
+            placeholder="Type to search..."
+            [(ngModel)]="searchString"
+          />
+        </div>
+      </div>
+    </form>
     <table class="table table-bordered table-striped">
       <thead class="thead-dark">
       <tr>
@@ -12,7 +28,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr clickable *ngFor="let article of articles" [routerLink]="['/article/', article.id]">
+      <tr clickable *ngFor="let article of articles | filter : 'title' : searchString; let i = index" [routerLink]="['/article/', article.id]">
         <td>{{ article.title }}</td>
         <td>{{ article.description }}</td>
         <td>{{ article.articleStatus }}</td>
