--- a/angular-frontend/src/app/navigation/navigation.component.html
+++ b/angular-frontend/src/app/navigation/navigation.component.html
@@ -23,8 +23,8 @@
           My articles
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/requests">Manage articles</a>
-          <a class="dropdown-item" href="/requests">Create article</a>
+          <a class="dropdown-item" href="/articles/user">Manage articles</a>
+          <a class="dropdown-item" href="/createArticle">Create article</a>
         </div>
       </li>
       <li class="nav-item">
