--- a/angular-frontend/src/app/login/login.component.html
+++ b/angular-frontend/src/app/login/login.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-<div class="card">
+  <div class="card" style="display: inline-block;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 700px;
+    height: 310px;
+    margin: auto;">
   <h4 class="card-header">Login</h4>
   <div class="card-body">
     <form
