--- a/angular-frontend/src/app/edit-article/edit-article.component.html
+++ b/angular-frontend/src/app/edit-article/edit-article.component.html
@@ -2,7 +2,7 @@
 
 <form name="form" #f="ngForm" novalidate (ngSubmit)="f.form.valid && onSubmit()" style="width:550px; margin:auto;">
 
-  <h4 class="card-header">Create Article</h4>
+  <h4 class="card-header">Update article</h4>
 
   <div class="form-group" style="margin-bottom: 25px; margin-top:15px">
     <label for="titleForm">Name</label>
